refactored FileResource